[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Audio/Lompattt.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sprite/AditSprite.png" type="Texture" id=3]
[ext_resource path="res://Audio/Step.mp3" type="AudioStream" id=4]
[ext_resource path="res://HUD/Key.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Label.gd" type="Script" id=7]
[ext_resource path="res://Assets/menu.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Climb"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Climb1"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Audio/StepSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=11]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Audio/StepSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 23.2795, 52.8342 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 25.269, 53.7886 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="MovementAnimation" type="AnimationPlayer" parent="."]
anims/Climb = SubResource( 1 )
anims/Climb1 = SubResource( 2 )
anims/DashLeft = SubResource( 3 )
anims/DashRight = SubResource( 4 )
anims/Dying = SubResource( 5 )
anims/JumpLeft = SubResource( 6 )
anims/JumpLeft1 = SubResource( 7 )
anims/JumpRight = SubResource( 8 )
anims/JumpRight1 = SubResource( 9 )
anims/WalkLeft = SubResource( 10 )
anims/WalkRight = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.17869, 3.18536 )
shape = SubResource( 12 )

[node name="Dash" type="Node" parent="."]

[node name="DoubleClick" type="Timer" parent="Dash"]
wait_time = 0.1
one_shot = true

[node name="DashTimer" type="Timer" parent="Dash"]
wait_time = 0.3
one_shot = true

[node name="DashCooldown" type="Timer" parent="Dash"]
one_shot = true

[node name="ClimbAnimation" type="Timer" parent="Dash"]
wait_time = 0.4

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1.88774, 2.35968 )
shape = SubResource( 13 )

[node name="Audio" type="Node" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )

[node name="StepSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 50, -250 )
current = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.49776, 0.334824 )
scale = Vector2( 0.945312, 0.945312 )
texture = ExtResource( 3 )
hframes = 5
vframes = 2
frame = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Key" parent="CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 1869.59, 90.5096 )

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 129.772
margin_top = 97.0139
margin_right = 169.772
margin_bottom = 111.014
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 968.456, 554.387 )
scale = Vector2( 1.04815, 1.04815 )
texture = ExtResource( 8 )

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_top = 19.0273
margin_bottom = 19.0273

[connection signal="timeout" from="Dash/DoubleClick" to="." method="_on_DoubleClick_timeout"]
[connection signal="timeout" from="Dash/DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Dash/DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="Dash/ClimbAnimation" to="." method="_on_ClimbAnimation_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
